<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Views.Activity.MainActivity">

    <ScrollView
        android:id="@+id/ScrollView_loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true"
        android:layout_below="@+id/textView3"
        >

        <LinearLayout
            android:id="@+id/LL_AdrBat_LocaliteNouveauNom_Rural"
            style="@style/LLStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@drawable/logo_rapport_supervision" />

            <TextView
                android:id="@+id/tv_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_app_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tv_SousTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_NomInstitution"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bootstrap_brand_primary" />

            <LinearLayout
                android:id="@+id/LL_Fomulaire_MAIN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorRed"
                    />

                <LinearLayout
                    android:id="@+id/LL_FomulaireSDE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/bootstrap_gray_lighter"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_definitionFormulaire2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/msg_RapportDeSupervisionDirecte"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorRed" />

                    <Button
                        android:id="@+id/btn_RedigerRapport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/bootstrap_brand_primary"
                        android:padding="20dp"
                        android:text="@string/label_redigerRapport"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp"
                        android:layout_marginBottom="10dp"
                        />

                    <Button
                        android:id="@+id/btn_ConsulterResultat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/bootstrap_brand_info"
                        android:padding="20dp"
                        android:text="@string/label_ConsulterRapport"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_GestionCompteUtilisateur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/LabelGestionCompteUtilisateur"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/btn_GestionCompteUtilisateur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/bootstrap_brand_success"
                        android:padding="20dp"
                        android:text="Compte Utilisateur"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_Connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/bootstrap_brand_primary"
                android:padding="20dp"
                android:text="Connecter"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_Utilisateur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorRed"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btn_QuitterApplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/bootstrap_brand_danger"
                android:padding="20dp"
                android:text="@string/label_Deconnecter"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/msg_Developpeur"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="10dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
</RelativeLayout>
