<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_gray_lighter"
    android:weightSum="1">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/linearLayoutStyle"
                >
                <TextView
                    android:id="@+id/tv_GrandTitre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BATIMAN"
                    android:textSize="19dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/margin_5dp"
                    android:paddingBottom="@dimen/margin_5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:textColor="@color/bootstrap_brand_danger"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/linearLayoutStyle"
                >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/linearLayoutStyle"
                >
                <TextView
                    android:id="@+id/tv_NomCompletAgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_NomCompletAgent"
                    style="@style/tvTitre2"
                    />
                <EditText
                    android:id="@+id/et_NomCompletAgent"
                    android:background="@drawable/my_shape"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_NomCompletAgent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/tv_CommentairesGeneraux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_CommentairesGeneraux"
                    style="@style/tvTitre2"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/et_CommentairesGeneraux"
                    android:background="@drawable/my_shape"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_HuntCommentairesGeneraux"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:maxLines="4"
                    />

            </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/linearLayoutStyle"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnQuitter_Bat"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_selector_gris"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:shadowColor="@color/white"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1.0"
                    android:text="@string/label_Quit"
                    android:textColor="@color/colorBlack"
                    android:textSize="22dp"
                    android:typeface="serif"

                    />
                <Button
                    android:id="@+id/btnContinuer"
                    android:layout_height="wrap_content"
                    android:text="@string/label_QuestionSuivante"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/layout_selector_bleu"
                    android:paddingLeft="20dp"
                    android:layout_margin="5dp"
                    android:paddingRight="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textSize="22dp"
                    android:shadowColor="#000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1.0"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:clickable="true"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>