<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Views.Activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/ScrollView_loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--
        android:background="@drawable/border_shadow"-->
        <LinearLayout
            android:id="@+id/LLayout_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo_rapport_supervision"
            />

            <TextView
                android:id="@+id/tv_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_CompteUtilisateur"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textColor="@color/bootstrap_brand_primary"
                />
            <EditText
                android:background="@drawable/my_shape"
                android:id="@+id/tv_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_CompteUtilisateur"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionUnspecified"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_MotDePasse"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:textColor="@color/bootstrap_brand_primary"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/tv_Password"
                android:background="@drawable/my_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_MotDePasse"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="10dp"
                android:imeActionId="@integer/imeActionId_EtReponse_6"
                android:imeActionLabel="@string/action_Connecter"
                android:imeOptions="actionUnspecified"
                />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/action_Connecter"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:layout_marginTop="16dp"
                android:padding="20dp"
                app:bootstrapBrand="success"
                app:roundedCorners="true"
                app:bootstrapSize="xl"
                android:background="@drawable/layout_selector_vert"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
